recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:4: error: not found: value level
	if (level!=1) {
            ^