recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {

	if (level!=1) {

	} else {
		for (i<-1 to 5) {
			avance(length)
			droite(120)
		}
	}

}
